--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,32 @@
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
+
+# Distribution / packaging
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+
+# Macos
 .DS_Store
-/xpx/*
+
+# My app
 /789/*
-/yb/*
 __pycache__/*
-/data/*
 *.xls
 *.xlsx
-/mgtb.egg-info/*
-*.pyc
-*.xls
-*.xlsx
-/mgtb/__pycache__/*.pyc
